stylesheets/styles.css
/* http://meyerweb.com/eric/tools/css/reset/
  RESET
*/
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
  display: block;
}
body {
  line-height: 1;
}
ol, ul {
  list-style: none;
}
blockquote, q {
  quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
  content: '';
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}


/* MAIN CONTENT STYLES */
html, body {
	height: 100%;
	background-color: #EBEBEB;
}

.container {
	width: 100%;
	height: 100%;
	font-family: 'Source Code Pro', sans-serif;
	font-size: 1.5em;
	padding-bottom: 11px;
}

h1 {
	font-size: 3em;
	margin-bottom: 11px;
	-webkit-transition: all .3s ease-in-out;
	-moz-transition: all .3s ease-in-out;
	-ms-transition: all .3s ease-in-out;
	-o-transition: all .3s ease-in-out;
	transition: all .3s ease-in-out;
}
h2 {
	font-size: 2em;
}
h3 {
	font-size: 1.5em;
}
h4 {
	font-size: 1.15em;
}
a {
	text-decoration: none;
	color: white;
}

.main {
	display: block;
	position: fixed;
	width: 59%;
	min-height: 100%;
}

.content {
	position: relative;
	text-align: right;
	padding: 0px 0;
}

.intro {
	width: 90%;
	display: block;
	float: right;
	margin-right: 5px;
	position: relative;
	width: 100%;
	height: 143px;
	text-align: right;
	padding-top: 66px;
	background-color: #cb2027;
}

.intro h1{
	color: white;
}

p.descriptor {
	font-weight: bolder;
	line-height: 1.5em;
	float: right;
}

.photo {
	padding-left: 2px;
	margin-bottom: 11px;
}

.light {
	color: #C7C7C7;
}

.sidebar {
	display: block;
	position: relative;
	width: 40%;
	margin-left: 58.62%;
	min-height: 242.7%;
	background-color: #DEDEDE;
}

.sideBlock {
	position: relative;
	width: 100%;
	height: 143px;
	text-align: left;
	padding-top: 66px;
	-webkit-transition: all .22s ease-in-out;
	-moz-transition: all .22s ease-in-out;
	-ms-transition: all .22s ease-in-out;
	-o-transition: all .22s ease-in-out;
	transition: all .22s ease-in-out;
}

.sideBlock:hover {
	background-color: #cb2027;
}

.sideBlock:hover h1 {
	color: white;
	margin-left: 22px;
/*	text-decoration: underline;
*/}

.sideBlock.leadIn {
	background: #cb2027;
	position: relative;
	width: 100%;
	height: 143px;
	text-align: left;
	-webkit-transition: all .22s ease-in-out;
	-moz-transition: all .22s ease-in-out;
	-ms-transition: all .22s ease-in-out;
	-o-transition: all .22s ease-in-out;
	transition: all .22s ease-in-out;
	padding-left: 22px;
}

.sideBlock.leadIn h1 {
	color: white;
}

.sideBlock .blog {
	-webkit-transition: all .22s ease-in-out;
	-moz-transition: all .22s ease-in-out;
	-ms-transition: all .22s ease-in-out;
	-o-transition: all .22s ease-in-out;
	transition: all .22s ease-in-out;
	opacity: 0;
}

.sideBlock:hover .blog  {
	font-size: 1em;
	opacity: 1.0;
	color: white;
	margin-left: 22px;
}

.sideBlock .git {
	-webkit-transition: all .22s ease-in-out;
	-moz-transition: all .22s ease-in-out;
	-ms-transition: all .22s ease-in-out;
	-o-transition: all .22s ease-in-out;
	transition: all .22s ease-in-out;
	opacity: 0;
}

.sideBlock:hover .git  {
	opacity: 1.0;
	color: white;
	font-size: 1em;
	margin-left: 22px;
}

.sideBlock .design {
	-webkit-transition: all .22s ease-in-out;
	-moz-transition: all .22s ease-in-out;
	-ms-transition: all .22s ease-in-out;
	-o-transition: all .22s ease-in-out;
	transition: all .22s ease-in-out;
	opacity: 0;
}

.sideBlock:hover .design  {
	opacity: 1.0;
	color: white;
	font-size: 1em;
	margin-left: 22px;
}

.sideBlock:hover .design a  {
	color: white;
	text-decoration: underline;
}

.sideBlock .fun {
	-webkit-transition: all .22s ease-in-out;
	-moz-transition: all .22s ease-in-out;
	-ms-transition: all .22s ease-in-out;
	-o-transition: all .22s ease-in-out;
	transition: all .22s ease-in-out;
	opacity: 0;
}

.sideBlock:hover .fun  {
	opacity: 1.0;
	color: white;
	font-size: 1em;
	margin-left: 22px;
}

.sideBlock .contact {
	-webkit-transition: all .22s ease-in-out;
	-moz-transition: all .22s ease-in-out;
	-ms-transition: all .22s ease-in-out;
	-o-transition: all .22s ease-in-out;
	transition: all .22s ease-in-out;
	opacity: 0;
}

.sideBlock:hover .contact  {
	opacity: 1.0;
	color: white;
	font-size: 1.0em;
	margin-left: 22px;
}

.footer {
	width: 90%;
	line-height: 17em;
	float: right;
	margin-right: 5px;
}

.footer a {
	color: #cb2027;
}

